# haberdashery

./: CONTRIBUTING.md  README.md
bindings/rust_bench/: Cargo.toml  cargo.sh
bindings/rust_bench/benches/: bench.rs
bindings/rust_lib/: Cargo.toml
bindings/rust_lib/src/: aead.rs  lib.rs  mac.rs  traits.rs  vectors.rs
bindings/rust_lib/src/aead/: aes128gcm_broadwell.rs  aes128gcm_haswell.rs  aes128gcm_skylake.rs  aes128gcm_skylakex.rs  aes128gcm_tigerlake.rs  aes192gcm_broadwell.rs  aes192gcm_haswell.rs  aes192gcm_skylake.rs  aes192gcm_skylakex.rs  aes192gcm_tigerlake.rs  aes256gcm_broadwell.rs  aes256gcm_haswell.rs  aes256gcm_neoversev2.rs  aes256gcm_skylake.rs  aes256gcm_skylakex.rs  aes256gcm_tigerlake.rs  aes256gcmdndk_broadwell.rs  aes256gcmdndk_haswell.rs  aes256gcmdndk_neoversev2.rs  aes256gcmdndk_skylake.rs  aes256gcmdndk_skylakex.rs  aes256gcmdndk_tigerlake.rs  aes256gcmdndkv2_broadwell.rs  aes256gcmdndkv2_haswell.rs  aes256gcmdndkv2_neoversev2.rs  aes256gcmdndkv2_skylake.rs  aes256gcmdndkv2_skylakex.rs  aes256gcmdndkv2_tigerlake.rs  aes256gcmdndkv2kc_broadwell.rs  aes256gcmdndkv2kc_haswell.rs  aes256gcmdndkv2kc_neoversev2.rs  aes256gcmdndkv2kc_skylake.rs  aes256gcmdndkv2kc_skylakex.rs  aes256gcmdndkv2kc_tigerlake.rs  aes256gcmsiv_broadwell.rs  aes256gcmsiv_haswell.rs  aes256gcmsiv_neoversev2.rs  aes256gcmsiv_sapphirerapids.rs  aes256gcmsiv_skylake.rs  aes256gcmsiv_skylakex.rs  (+2 more)
bindings/rust_lib/src/benchmark/: aead.rs  hash.rs  mac.rs
bindings/rust_lib/src/mac/: sivmac_broadwell.rs  sivmac_haswell.rs  sivmac_neoversev2.rs  sivmac_skylake.rs  sivmac_skylakex.rs  sivmac_tigerlake.rs
bindings/rust_lib/src/traits/: aead.rs  hash.rs  mac.rs
bindings/rust_lib/src/vectors/: aead.rs  mac.rs
bindings/rust_sys/: Cargo.toml
bindings/rust_sys/src/: aead.rs  aead_streaming.rs  hash.rs  lib.rs  mac.rs
bindings/rust_sys/src/aead/: aes128gcm_broadwell.rs  aes128gcm_haswell.rs  aes128gcm_skylake.rs  aes128gcm_skylakex.rs  aes128gcm_tigerlake.rs  aes192gcm_broadwell.rs  aes192gcm_haswell.rs  aes192gcm_skylake.rs  aes192gcm_skylakex.rs  aes192gcm_tigerlake.rs  aes256gcm_broadwell.rs  aes256gcm_haswell.rs  aes256gcm_neoversev2.rs  aes256gcm_skylake.rs  aes256gcm_skylakex.rs  aes256gcm_tigerlake.rs  aes256gcmdndk_broadwell.rs  aes256gcmdndk_haswell.rs  aes256gcmdndk_neoversev2.rs  aes256gcmdndk_skylake.rs  aes256gcmdndk_skylakex.rs  aes256gcmdndk_tigerlake.rs  aes256gcmdndkv2_broadwell.rs  aes256gcmdndkv2_haswell.rs  aes256gcmdndkv2_neoversev2.rs  aes256gcmdndkv2_skylake.rs  aes256gcmdndkv2_skylakex.rs  aes256gcmdndkv2_tigerlake.rs  aes256gcmdndkv2kc_broadwell.rs  aes256gcmdndkv2kc_haswell.rs  aes256gcmdndkv2kc_neoversev2.rs  aes256gcmdndkv2kc_skylake.rs  aes256gcmdndkv2kc_skylakex.rs  aes256gcmdndkv2kc_tigerlake.rs  aes256gcmsiv_broadwell.rs  aes256gcmsiv_haswell.rs  aes256gcmsiv_neoversev2.rs  aes256gcmsiv_sapphirerapids.rs  aes256gcmsiv_skylake.rs  aes256gcmsiv_skylakex.rs  (+2 more)
bindings/rust_sys/src/aead_streaming/: aes128gcm_streaming_broadwell.rs  aes128gcm_streaming_haswell.rs  aes128gcm_streaming_skylake.rs  aes128gcm_streaming_skylakex.rs  aes128gcm_streaming_tigerlake.rs  aes256gcm_streaming_broadwell.rs  aes256gcm_streaming_haswell.rs  aes256gcm_streaming_skylake.rs  (+2 more)
rust/asm-gen/: Cargo.toml  asm.sh  build.rs  cargo.sh  rust-toolchain.toml
rust/asm-gen/aes192gcm/: Cargo.toml
rust/asm-gen/aes256gcm/: Cargo.toml  generate.sh
rust/asm-gen/aes256gcm_streaming/: Cargo.toml
rust/asm-gen/aes256gcmdndk/: Cargo.toml  generate.sh
rust/asm-gen/aes256gcmsiv/: Cargo.toml  generate.sh
rust/asm-gen/benches/: bench.rs
rust/asm-gen/sivmac/: Cargo.toml  generate.sh
rust/asm-gen/src/: aes.rs  aes128.rs  aes128gcm.rs  aes192.rs  aes192gcm.rs  aes256.rs  aes256gcm.rs  aes256gcmdndk.rs  aes256gcmdndkv2.rs  aes256gcmdndkv2kc.rs  aes256gcmsiv.rs  aesgcm.rs  aesgcm_aarch64.rs  asm.rs  block.rs  clamped_index.rs  clmul.rs  clmulfoil.rs  counter128.rs  ffi.rs  ghash.rs  hmacsha256.rs  intrinsics.rs  is_supported.rs  lib.rs  ops.rs  partial.rs  polyval.rs  sha256.rs  sivmac.rs
rust/bindings/bindings-proc/: Cargo.toml
rust/cozybuf/: Cargo.toml  cozygen.sh
rust/cozybuf/cozybuf-example/: Cargo.toml
rust/cozybuf/cozybuf-proc/: Cargo.toml
rust/cozybuf/src/: cpp20.rs  lib.rs  main.rs  rust.rs
rust/libsodium/: Cargo.toml
rust/libsodium/benches/: benches.rs
rust/libsodium/src/: chacha20_poly1305.rs  chacha20_poly1305_ietf.rs  lib.rs  xchacha20_poly1305_ietf.rs
rust/nano-bench/: Cargo.toml
rust/nano-bench/src/: benchmark.rs  config.rs  csv.rs  lib.rs  linkme.rs  main.rs  measure.rs  report.rs  runner.rs  suite.rs  thread_pool.rs
rust/openssl/: Cargo.toml
rust/openssl/benches/: benches.rs
rust/openssl/src/: aead.rs  aes128gcm.rs  aes256gcm.rs  chacha20_poly1305.rs  cmac128.rs  curve25519.rs  evp_cipher_ctx.rs  evp_mac_ctx.rs  hmac_sha256.rs  hmacsha256.rs  lib.rs  mac.rs  version.rs  wrapper.rs
rust/perf-caliper/: Cargo.toml
rust/perf-caliper/benches/: bench.rs
rust/perf-caliper/perf-caliper-proc/: Cargo.toml
rust/perf-caliper/src/: benchmark.rs  benchmark_main.rs  counters.rs  csv.rs  flags.rs  lib.rs  md.rs  measure.rs  perf.rs  table.rs
rust/perf-counters/: Cargo.toml  rust-toolchain.toml
rust/perf-counters/benches/: bench.rs
rust/perf-counters/src/: counters.rs  event.rs  fence.rs  hardware_clock.rs  lib.rs  mmap.rs  perf_event.rs  sched.rs
rust/sflags/: Cargo.toml
rust/sflags/src/: _internal.rs  convert.rs  flag.rs  lib.rs  parse.rs  registry.rs
rust/sflags/test-helper/: Cargo.toml
rust/sflags/tests/: bool.rs  i32.rs  i32_required.rs  multiline.rs  optional.rs  parse_order.rs  path.rs  pathbuf.rs  slice.rs  string.rs  string_required.rs  u32.rs  u32_required.rs  vec.rs
rust/sys/traits/: Cargo.toml
rust/template-proc/: Cargo.toml
rust/template-proc/src/: aead.rs  aead_streaming.rs  args.rs  constants.rs  function.rs  lib.rs  mac.rs  sealed_trait.rs  structx.rs
rust/transliteral/: Cargo.toml  rust-toolchain.toml
rust/transliteral/src/: lib.rs
rust/transliteral/tests/: aes256.rs  pclmulqdq.rs  xor.rs
(+1074 files in other folders)
