# @generated

[package]
name = "haberdashery_bench"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "bench"
harness = false

[dependencies]
haberdashery-lib = { path = "../rust_lib", default-features = false, features = ["bench"] }
perf-caliper = { path = "../../rust/perf-caliper" }

[features]
default = ["aes128gcm_broadwell", "aes128gcm_haswell", "aes128gcm_skylake", "aes128gcm_skylakex", "aes128gcm_tigerlake", "aes192gcm_broadwell", "aes192gcm_haswell", "aes192gcm_skylake", "aes192gcm_skylakex", "aes192gcm_tigerlake", "aes256gcm_broadwell", "aes256gcm_haswell", "aes256gcm_skylake", "aes256gcm_skylakex", "aes256gcm_tigerlake", "aes256gcmdndk_broadwell", "aes256gcmdndk_haswell", "aes256gcmdndk_skylake", "aes256gcmdndk_skylakex", "aes256gcmdndk_tigerlake", "aes256gcmdndkv2_broadwell", "aes256gcmdndkv2_haswell", "aes256gcmdndkv2_skylake", "aes256gcmdndkv2_skylakex", "aes256gcmdndkv2_tigerlake", "aes256gcmdndkv2kc_broadwell", "aes256gcmdndkv2kc_haswell", "aes256gcmdndkv2kc_skylake", "aes256gcmdndkv2kc_skylakex", "aes256gcmdndkv2kc_tigerlake", "aes256gcmsiv_broadwell", "aes256gcmsiv_haswell", "aes256gcmsiv_skylake", "aes256gcmsiv_skylakex", "aes256gcmsiv_tigerlake", "sivmac_broadwell", "sivmac_haswell", "sivmac_skylake", "sivmac_skylakex", "sivmac_tigerlake"]
aes128gcm_broadwell = ["haberdashery-lib/aes128gcm_broadwell"]
aes128gcm_haswell = ["haberdashery-lib/aes128gcm_haswell"]
aes128gcm_skylake = ["haberdashery-lib/aes128gcm_skylake"]
aes128gcm_skylakex = ["haberdashery-lib/aes128gcm_skylakex"]
aes128gcm_tigerlake = ["haberdashery-lib/aes128gcm_tigerlake"]
aes192gcm_broadwell = ["haberdashery-lib/aes192gcm_broadwell"]
aes192gcm_haswell = ["haberdashery-lib/aes192gcm_haswell"]
aes192gcm_skylake = ["haberdashery-lib/aes192gcm_skylake"]
aes192gcm_skylakex = ["haberdashery-lib/aes192gcm_skylakex"]
aes192gcm_tigerlake = ["haberdashery-lib/aes192gcm_tigerlake"]
aes256gcm_broadwell = ["haberdashery-lib/aes256gcm_broadwell"]
aes256gcm_haswell = ["haberdashery-lib/aes256gcm_haswell"]
aes256gcm_skylake = ["haberdashery-lib/aes256gcm_skylake"]
aes256gcm_skylakex = ["haberdashery-lib/aes256gcm_skylakex"]
aes256gcm_tigerlake = ["haberdashery-lib/aes256gcm_tigerlake"]
aes256gcmdndk_broadwell = ["haberdashery-lib/aes256gcmdndk_broadwell"]
aes256gcmdndk_haswell = ["haberdashery-lib/aes256gcmdndk_haswell"]
aes256gcmdndk_skylake = ["haberdashery-lib/aes256gcmdndk_skylake"]
aes256gcmdndk_skylakex = ["haberdashery-lib/aes256gcmdndk_skylakex"]
aes256gcmdndk_tigerlake = ["haberdashery-lib/aes256gcmdndk_tigerlake"]
aes256gcmdndkv2_broadwell = ["haberdashery-lib/aes256gcmdndkv2_broadwell"]
aes256gcmdndkv2_haswell = ["haberdashery-lib/aes256gcmdndkv2_haswell"]
aes256gcmdndkv2_skylake = ["haberdashery-lib/aes256gcmdndkv2_skylake"]
aes256gcmdndkv2_skylakex = ["haberdashery-lib/aes256gcmdndkv2_skylakex"]
aes256gcmdndkv2_tigerlake = ["haberdashery-lib/aes256gcmdndkv2_tigerlake"]
aes256gcmdndkv2kc_broadwell = ["haberdashery-lib/aes256gcmdndkv2kc_broadwell"]
aes256gcmdndkv2kc_haswell = ["haberdashery-lib/aes256gcmdndkv2kc_haswell"]
aes256gcmdndkv2kc_skylake = ["haberdashery-lib/aes256gcmdndkv2kc_skylake"]
aes256gcmdndkv2kc_skylakex = ["haberdashery-lib/aes256gcmdndkv2kc_skylakex"]
aes256gcmdndkv2kc_tigerlake = ["haberdashery-lib/aes256gcmdndkv2kc_tigerlake"]
aes256gcmsiv_broadwell = ["haberdashery-lib/aes256gcmsiv_broadwell"]
aes256gcmsiv_haswell = ["haberdashery-lib/aes256gcmsiv_haswell"]
aes256gcmsiv_skylake = ["haberdashery-lib/aes256gcmsiv_skylake"]
aes256gcmsiv_skylakex = ["haberdashery-lib/aes256gcmsiv_skylakex"]
aes256gcmsiv_tigerlake = ["haberdashery-lib/aes256gcmsiv_tigerlake"]
sivmac_broadwell = ["haberdashery-lib/sivmac_broadwell"]
sivmac_haswell = ["haberdashery-lib/sivmac_haswell"]
sivmac_skylake = ["haberdashery-lib/sivmac_skylake"]
sivmac_skylakex = ["haberdashery-lib/sivmac_skylakex"]
sivmac_tigerlake = ["haberdashery-lib/sivmac_tigerlake"]
