# @generated

[package]
name = "haberdashery_bench"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "bench"
harness = false

[dependencies]
haberdashery-lib = { path = "../rust_lib", default-features = false, features = ["bench"] }
perf-caliper = { path = "../../rust/perf-caliper" }

[features]
default = ["aes128gcm_broadwell", "aes128gcm_skylakex", "aes128gcm_tigerlake", "aes192gcm_broadwell", "aes192gcm_skylakex", "aes192gcm_tigerlake", "aes256gcm_broadwell", "aes256gcm_neoversev2", "aes256gcm_skylakex", "aes256gcm_tigerlake", "aes256gcmdndk_broadwell", "aes256gcmdndk_neoversev2", "aes256gcmdndk_skylakex", "aes256gcmdndk_tigerlake", "aes256gcmdndkv2_broadwell", "aes256gcmdndkv2_neoversev2", "aes256gcmdndkv2_skylakex", "aes256gcmdndkv2_tigerlake", "aes256gcmdndkv2kc_broadwell", "aes256gcmdndkv2kc_neoversev2", "aes256gcmdndkv2kc_skylakex", "aes256gcmdndkv2kc_tigerlake", "aes256gcmsiv_broadwell", "aes256gcmsiv_neoversev2", "aes256gcmsiv_sapphirerapids", "aes256gcmsiv_skylakex", "aes256gcmsiv_tigerlake", "aes256gcmsiv_zen4", "sivmac_broadwell", "sivmac_neoversev2", "sivmac_skylakex", "sivmac_tigerlake"]
aes128gcm_broadwell = ["haberdashery-lib/aes128gcm_broadwell"]
aes128gcm_skylakex = ["haberdashery-lib/aes128gcm_skylakex"]
aes128gcm_tigerlake = ["haberdashery-lib/aes128gcm_tigerlake"]
aes192gcm_broadwell = ["haberdashery-lib/aes192gcm_broadwell"]
aes192gcm_skylakex = ["haberdashery-lib/aes192gcm_skylakex"]
aes192gcm_tigerlake = ["haberdashery-lib/aes192gcm_tigerlake"]
aes256gcm_broadwell = ["haberdashery-lib/aes256gcm_broadwell"]
aes256gcm_neoversev2 = ["haberdashery-lib/aes256gcm_neoversev2"]
aes256gcm_skylakex = ["haberdashery-lib/aes256gcm_skylakex"]
aes256gcm_tigerlake = ["haberdashery-lib/aes256gcm_tigerlake"]
aes256gcmdndk_broadwell = ["haberdashery-lib/aes256gcmdndk_broadwell"]
aes256gcmdndk_neoversev2 = ["haberdashery-lib/aes256gcmdndk_neoversev2"]
aes256gcmdndk_skylakex = ["haberdashery-lib/aes256gcmdndk_skylakex"]
aes256gcmdndk_tigerlake = ["haberdashery-lib/aes256gcmdndk_tigerlake"]
aes256gcmdndkv2_broadwell = ["haberdashery-lib/aes256gcmdndkv2_broadwell"]
aes256gcmdndkv2_neoversev2 = ["haberdashery-lib/aes256gcmdndkv2_neoversev2"]
aes256gcmdndkv2_skylakex = ["haberdashery-lib/aes256gcmdndkv2_skylakex"]
aes256gcmdndkv2_tigerlake = ["haberdashery-lib/aes256gcmdndkv2_tigerlake"]
aes256gcmdndkv2kc_broadwell = ["haberdashery-lib/aes256gcmdndkv2kc_broadwell"]
aes256gcmdndkv2kc_neoversev2 = ["haberdashery-lib/aes256gcmdndkv2kc_neoversev2"]
aes256gcmdndkv2kc_skylakex = ["haberdashery-lib/aes256gcmdndkv2kc_skylakex"]
aes256gcmdndkv2kc_tigerlake = ["haberdashery-lib/aes256gcmdndkv2kc_tigerlake"]
aes256gcmsiv_broadwell = ["haberdashery-lib/aes256gcmsiv_broadwell"]
aes256gcmsiv_neoversev2 = ["haberdashery-lib/aes256gcmsiv_neoversev2"]
aes256gcmsiv_sapphirerapids = ["haberdashery-lib/aes256gcmsiv_sapphirerapids"]
aes256gcmsiv_skylakex = ["haberdashery-lib/aes256gcmsiv_skylakex"]
aes256gcmsiv_tigerlake = ["haberdashery-lib/aes256gcmsiv_tigerlake"]
aes256gcmsiv_zen4 = ["haberdashery-lib/aes256gcmsiv_zen4"]
sivmac_broadwell = ["haberdashery-lib/sivmac_broadwell"]
sivmac_neoversev2 = ["haberdashery-lib/sivmac_neoversev2"]
sivmac_skylakex = ["haberdashery-lib/sivmac_skylakex"]
sivmac_tigerlake = ["haberdashery-lib/sivmac_tigerlake"]
