# @generated

[package]
name = "haberdashery-lib"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
haberdashery-sys = { path = "../rust_sys" }
perf-caliper = { path = "../../rust/perf-caliper", optional = true }

[dev-dependencies]
anyhow = "1.0.82"
random = { path = "../../rust/random" }
static-env = { path = "../../rust/static-env" }
test-vectors = { path = "../../rust/test-vectors" }

[features]
bench = ["perf-caliper"]
gen = []
default = ["aes128gcm_broadwell", "aes128gcm_haswell", "aes128gcm_skylake", "aes128gcm_skylakex", "aes128gcm_tigerlake", "aes192gcm_broadwell", "aes192gcm_haswell", "aes192gcm_skylake", "aes192gcm_skylakex", "aes192gcm_tigerlake", "aes256gcm_broadwell", "aes256gcm_haswell", "aes256gcm_skylake", "aes256gcm_skylakex", "aes256gcm_tigerlake", "aes256gcmdndk_broadwell", "aes256gcmdndk_haswell", "aes256gcmdndk_skylake", "aes256gcmdndk_skylakex", "aes256gcmdndk_tigerlake", "aes256gcmsiv_broadwell", "aes256gcmsiv_haswell", "aes256gcmsiv_skylake", "aes256gcmsiv_skylakex", "aes256gcmsiv_tigerlake", "sivmac_broadwell", "sivmac_haswell", "sivmac_skylake", "sivmac_skylakex", "sivmac_tigerlake"]
aes128gcm_broadwell = ["haberdashery-sys/aes128gcm_broadwell"]
aes128gcm_haswell = ["haberdashery-sys/aes128gcm_haswell"]
aes128gcm_skylake = ["haberdashery-sys/aes128gcm_skylake"]
aes128gcm_skylakex = ["haberdashery-sys/aes128gcm_skylakex"]
aes128gcm_tigerlake = ["haberdashery-sys/aes128gcm_tigerlake"]
aes192gcm_broadwell = ["haberdashery-sys/aes192gcm_broadwell"]
aes192gcm_haswell = ["haberdashery-sys/aes192gcm_haswell"]
aes192gcm_skylake = ["haberdashery-sys/aes192gcm_skylake"]
aes192gcm_skylakex = ["haberdashery-sys/aes192gcm_skylakex"]
aes192gcm_tigerlake = ["haberdashery-sys/aes192gcm_tigerlake"]
aes256gcm_broadwell = ["haberdashery-sys/aes256gcm_broadwell"]
aes256gcm_haswell = ["haberdashery-sys/aes256gcm_haswell"]
aes256gcm_skylake = ["haberdashery-sys/aes256gcm_skylake"]
aes256gcm_skylakex = ["haberdashery-sys/aes256gcm_skylakex"]
aes256gcm_tigerlake = ["haberdashery-sys/aes256gcm_tigerlake"]
aes256gcmdndk_broadwell = ["haberdashery-sys/aes256gcmdndk_broadwell"]
aes256gcmdndk_haswell = ["haberdashery-sys/aes256gcmdndk_haswell"]
aes256gcmdndk_skylake = ["haberdashery-sys/aes256gcmdndk_skylake"]
aes256gcmdndk_skylakex = ["haberdashery-sys/aes256gcmdndk_skylakex"]
aes256gcmdndk_tigerlake = ["haberdashery-sys/aes256gcmdndk_tigerlake"]
aes256gcmsiv_broadwell = ["haberdashery-sys/aes256gcmsiv_broadwell"]
aes256gcmsiv_haswell = ["haberdashery-sys/aes256gcmsiv_haswell"]
aes256gcmsiv_skylake = ["haberdashery-sys/aes256gcmsiv_skylake"]
aes256gcmsiv_skylakex = ["haberdashery-sys/aes256gcmsiv_skylakex"]
aes256gcmsiv_tigerlake = ["haberdashery-sys/aes256gcmsiv_tigerlake"]
sivmac_broadwell = ["haberdashery-sys/sivmac_broadwell"]
sivmac_haswell = ["haberdashery-sys/sivmac_haswell"]
sivmac_skylake = ["haberdashery-sys/sivmac_skylake"]
sivmac_skylakex = ["haberdashery-sys/sivmac_skylakex"]
sivmac_tigerlake = ["haberdashery-sys/sivmac_tigerlake"]
