# @generated

[package]
name = "haberdashery-lib"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
haberdashery-sys = { path = "../rust_sys" }
perf-caliper = { path = "../../rust/perf-caliper", optional = true }

[dev-dependencies]
anyhow = "1.0.82"
random = { path = "../../rust/random" }
static-env = { path = "../../rust/static-env" }
test-vectors = { path = "../../rust/test-vectors" }

[features]
bench = ["perf-caliper"]
gen = []
default = ["aes128gcm_broadwell", "aes128gcm_skylakex", "aes128gcm_tigerlake", "aes192gcm_broadwell", "aes192gcm_skylakex", "aes192gcm_tigerlake", "aes256gcm_broadwell", "aes256gcm_neoversev2", "aes256gcm_skylakex", "aes256gcm_tigerlake", "aes256gcmdndk_broadwell", "aes256gcmdndk_neoversev2", "aes256gcmdndk_skylakex", "aes256gcmdndk_tigerlake", "aes256gcmdndkv2_broadwell", "aes256gcmdndkv2_neoversev2", "aes256gcmdndkv2_skylakex", "aes256gcmdndkv2_tigerlake", "aes256gcmdndkv2kc_broadwell", "aes256gcmdndkv2kc_neoversev2", "aes256gcmdndkv2kc_skylakex", "aes256gcmdndkv2kc_tigerlake", "aes256gcmsiv_broadwell", "aes256gcmsiv_neoversev2", "aes256gcmsiv_sapphirerapids", "aes256gcmsiv_skylakex", "aes256gcmsiv_tigerlake", "aes256gcmsiv_zen4", "sivmac_broadwell", "sivmac_neoversev2", "sivmac_skylakex", "sivmac_tigerlake"]
aes128gcm_broadwell = ["haberdashery-sys/aes128gcm_broadwell"]
aes128gcm_skylakex = ["haberdashery-sys/aes128gcm_skylakex"]
aes128gcm_tigerlake = ["haberdashery-sys/aes128gcm_tigerlake"]
aes192gcm_broadwell = ["haberdashery-sys/aes192gcm_broadwell"]
aes192gcm_skylakex = ["haberdashery-sys/aes192gcm_skylakex"]
aes192gcm_tigerlake = ["haberdashery-sys/aes192gcm_tigerlake"]
aes256gcm_broadwell = ["haberdashery-sys/aes256gcm_broadwell"]
aes256gcm_neoversev2 = ["haberdashery-sys/aes256gcm_neoversev2"]
aes256gcm_skylakex = ["haberdashery-sys/aes256gcm_skylakex"]
aes256gcm_tigerlake = ["haberdashery-sys/aes256gcm_tigerlake"]
aes256gcmdndk_broadwell = ["haberdashery-sys/aes256gcmdndk_broadwell"]
aes256gcmdndk_neoversev2 = ["haberdashery-sys/aes256gcmdndk_neoversev2"]
aes256gcmdndk_skylakex = ["haberdashery-sys/aes256gcmdndk_skylakex"]
aes256gcmdndk_tigerlake = ["haberdashery-sys/aes256gcmdndk_tigerlake"]
aes256gcmdndkv2_broadwell = ["haberdashery-sys/aes256gcmdndkv2_broadwell"]
aes256gcmdndkv2_neoversev2 = ["haberdashery-sys/aes256gcmdndkv2_neoversev2"]
aes256gcmdndkv2_skylakex = ["haberdashery-sys/aes256gcmdndkv2_skylakex"]
aes256gcmdndkv2_tigerlake = ["haberdashery-sys/aes256gcmdndkv2_tigerlake"]
aes256gcmdndkv2kc_broadwell = ["haberdashery-sys/aes256gcmdndkv2kc_broadwell"]
aes256gcmdndkv2kc_neoversev2 = ["haberdashery-sys/aes256gcmdndkv2kc_neoversev2"]
aes256gcmdndkv2kc_skylakex = ["haberdashery-sys/aes256gcmdndkv2kc_skylakex"]
aes256gcmdndkv2kc_tigerlake = ["haberdashery-sys/aes256gcmdndkv2kc_tigerlake"]
aes256gcmsiv_broadwell = ["haberdashery-sys/aes256gcmsiv_broadwell"]
aes256gcmsiv_neoversev2 = ["haberdashery-sys/aes256gcmsiv_neoversev2"]
aes256gcmsiv_sapphirerapids = ["haberdashery-sys/aes256gcmsiv_sapphirerapids"]
aes256gcmsiv_skylakex = ["haberdashery-sys/aes256gcmsiv_skylakex"]
aes256gcmsiv_tigerlake = ["haberdashery-sys/aes256gcmsiv_tigerlake"]
aes256gcmsiv_zen4 = ["haberdashery-sys/aes256gcmsiv_zen4"]
sivmac_broadwell = ["haberdashery-sys/sivmac_broadwell"]
sivmac_neoversev2 = ["haberdashery-sys/sivmac_neoversev2"]
sivmac_skylakex = ["haberdashery-sys/sivmac_skylakex"]
sivmac_tigerlake = ["haberdashery-sys/sivmac_tigerlake"]
