[package]
name = "haberdashery-asm-gen"
version = "0.1.0"
edition = "2021"

[profile.bench]
inherits = "release"
debug=true

[lib]
bench = false

[[bench]]
name = "bench"
harness = false

[features]
asm_gen =[]

# microarchs
haswell = ["asm_gen", "aes"]
broadwell = ["asm_gen", "aes"]
skylake = ["asm_gen", "aes"]
skylakex = ["asm_gen", "aes", "avx512f", "avx512vl", "avx512bw"]
tigerlake = ["asm_gen", "aes", "avx512f", "avx512vl", "avx512bw", "vpclmulqdq", "shani"]
zen3 =[]

# cpu features
aes = []
avx512f = []
avx512vl = []
avx512bw = []
vpclmulqdq = []
shani = []

# algorithms
aegis128l = []
aes128gcm = []
aes128gcm_streaming = []
aes192gcm = []
aes256gcm = []
aes256gcm_streaming = []
aes256gcmdndk = []
aes256gcmdndkv2 = []
aes256gcmdndkv2kc = []
aes256gcmsiv = []
sivmac = []

# x25519 rfc test vectors take a particularly long time
very_long_tests = []

[dependencies]
bindings-proc = { path = "../bindings/bindings-proc" }
cpuid = { path = "../cpuid" }
hex = "0.4.3"
hmac = "0.12.1"
intrinsics = { path = "../intrinsics" }
perf-caliper = { path = "../perf-caliper" }
transliteral = { path = "../transliteral" }

[dev-dependencies]
aes-gcm = "0.10.2"
aes-gcm-siv = "0.11.1"
generic-array = "0.14.7"
hex2 = { package = "hex", path = "../hex" }
hex-literal = "0.4.1"
random = { path = "../random" }
sha2 = "0.10.8"
static-env = { path = "../static-env" }
test-vectors = { path = "../test-vectors" }
