[package]
name = "haberdashery-asm-gen"
version = "0.1.0"
edition = "2021"

[profile.bench]
inherits = "release"
debug=true

[lib]
bench = false

[[bench]]
name = "bench"
harness = false

[features]
default = ["dep:perf-caliper"]

asm_gen = []

# x86_64 microarchs
haswell = ["asm_gen", "aes"]
broadwell = ["asm_gen", "aes"]
sapphirerapids = ["asm_gen", "aes", "avx512f", "avx512vl", "avx512bw", "vpclmulqdq", "shani"]
skylake = ["asm_gen", "aes"]
skylakex = ["asm_gen", "aes", "avx512f", "avx512vl", "avx512bw"]
tigerlake = ["asm_gen", "aes", "avx512f", "avx512vl", "avx512bw", "vpclmulqdq", "shani"]
zen4 = ["asm_gen", "aes", "avx512f", "avx512vl", "avx512bw", "vpclmulqdq", "shani"]

# aarch64 microarchs
neoversev2 =["asm_gen", "aes", "sha3", "sve"]

# cpu features
aes = []
avx512bw = []
avx512f = []
avx512vl = []
sha3 = []
shani = []
sve = []
vpclmulqdq = []

# algorithms
aegis128l = []
aes128gcm = []
aes128gcm_streaming = []
aes192gcm = []
aes256gcm = []
aes256gcm_streaming = []
aes256gcmdndk = []
aes256gcmdndkv2 = []
aes256gcmdndkv2kc = []
aes256gcmsiv = []
sivmac = []

# x25519 rfc test vectors take a particularly long time
very_long_tests = []

[dependencies]
bindings-proc = { path = "../bindings/bindings-proc" }
hex = "0.4.3"
hmac = "0.12.1"
perf-caliper = { path = "../perf-caliper", optional = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
cpuid = { path = "../cpuid" }
intrinsics = { path = "../intrinsics" }
transliteral = { path = "../transliteral" }

[dev-dependencies]
aes-gcm = "0.10.2"
aes-gcm-siv = "0.11.1"
generic-array = "0.14.7"
hex2 = { package = "hex", path = "../hex" }
hex-literal = "0.4.1"
random = { path = "../random" }
sha2 = "0.10.8"
sha3 = "0.10.8"
static-env = { path = "../static-env" }
test-vectors = { path = "../test-vectors" }
