[package]
name = "libsodium"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[[bench]]
name = "benches"
harness = false

[dev-dependencies]
hex = "0.4.3"

[dependencies]
cpuid = { path = "../cpuid" }
libsodium-sys-stable = { version = "1.20.3", features = ["optimized"] }
linkme = "0.3.17"
nano-bench = { path = "../nano-bench" }
random = { path = "../random" }
