[package]
name = "nano-bench"
version = "0.1.0"
edition = "2021"

[features]
default = ["macros"]
macros = ["dep:clap", "dep:nano-bench-proc"]

[dev-dependencies]
pretty_assertions = "1.4.0"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"], optional = true }
cpuid = { path = "../cpuid" }
csv = "1.3.0"
linkme = "0.3.17"
nano-bench-proc = { path = "../nano-bench-proc", optional = true }
nix = { version = "0.27.1", features = ["sched"] }
perf-event = "0.4.8"
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_yaml = "0.9.25"
tabled = "0.14.0"
units = { path = "../units" }
