[package]
name = "perf-counters"
version = "0.1.0"
edition = "2021"

[features]
default = ["benchbench", "rdpmc"]
# additional fencing to benchmark the benchmark overhead
benchbench = []
rdpmc = []

[lib]
bench = false

[[bench]]
name = "bench"
harness = false

[dependencies]
nix = { version = "0.27.1", features = ["sched"] }
perf-event-open-sys = "4.0.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
perf-events = { path = "../perf-events" }

[dev-dependencies]
sflags = { path = "../sflags" }
