[package]
name = "haberdashery-template-proc"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dev-dependencies]
pretty_assertions = "1.4.0"
prettyplease = "0.2.12"

[dependencies]
haberdashery-template-descriptor = { path = "../template-descriptor" }
proc-macro2 = "1.0.66"
quote = "1"
syn = { version = "2.0.28", features = ["full", "extra-traits"] }
