[package]
name = "transliteral"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.66"
quote = "1"
syn = { version = "2.0.28", features = ["full", "extra-traits"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
prettyplease = "0.2.12"
intrinsics = { path = "../intrinsics" }
random = { path = "../random" }
