[package]
name = "sivmac"
version = "0.1.0"
edition = "2021"

[features]
haswell = ["haberdashery-asm-gen/haswell"]
broadwell = ["haberdashery-asm-gen/broadwell"]
skylake = ["haberdashery-asm-gen/skylake"]
skylakex = ["haberdashery-asm-gen/skylakex"]
tigerlake = ["haberdashery-asm-gen/tigerlake"]

[dependencies]
ffi-util = { path = "../../ffi-util" }
haberdashery-asm-gen = { path = ".." }
haberdashery-template-proc = { path = "../../template-proc" }
