[package]
name = "bindings-proc"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
bindings = { path = ".." }
convert_case = "0.6.0"
proc-macro2 = "1.0.66"
quote = "1"
syn = { version = "2.0.28", features = ["full", "extra-traits"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
prettyplease = "0.2.12"
