[package]
name = "haberdashery-sys-traits"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[[bench]]
name = "benches"
harness = false

[dependencies]
haberdashery-sys = { path = ".." }
linkme = "0.3.17"
nano-bench = { path = "../../nano-bench" }
nano-bench-proc = { path = "../../nano-bench-proc" }
random = { path = "../../random" }
test-vectors = { path = "../../test-vectors" }

[dev-dependencies]
static-env = { path = "../../static-env" }
